html/style.css
/* common defaults */
html {
  height: 100%;
}

body {
  background: #444;
  box-sizing: border-box;
  color: #CCC;
  display: flex;
  flex-direction: column;
  height: 100%;
  margin: 0;
  overflow: hidden;
  overscroll-behavior: contain;
  padding: 0 12px;
  scrollbar-color: #444 #888;
}

body * {
  box-sizing: border-box;
  font-size: 16px;
  font-family: sans-serif;
  margin: 0;
  padding: 0;
}

select,
input {
  background: #444;
  color: #CCC;
}

input[type="number"] {
  border: 1px solid #CCC;
  padding-left: 4px;
}

input[type="checkbox"],
input[type="radio"] {
  margin: 3px 3px 3px 0;
}

/* overlay */
.blocking-overlay {
  position: absolute;
  background: rgba(100, 100, 100, 0.75);
  top: 40px;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
}

/* status text */
@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.status-text.fadein {
  animation: fadeIn 0.25s;
}

.status-text {
  background: lightgray;
  border: 1px solid white;
  color: black;
  display: none;
  left: 500px;
  padding: 8px;
  position: absolute;
  top: 50%;
  width: fit-content;
  z-index: 1;
}

/* upload controls */
.upload-controls-row {
  border-bottom: 1px dotted;
  display: flex;
  flex-shrink: 0;
  flex-wrap: wrap;
  max-width: 1000px;
  padding-top: 12px;
  padding-bottom: 4px;
}

.col-upload {
  align-items: baseline;
  display: flex;
  flex-grow: 1;
}

.col-upload span {
  white-space: nowrap;
}

.col-upload input {
  flex-grow: 1;
  width: 0;
}

.col-import-bin {
  align-items: baseline;
  justify-content: end;
  display: flex;
  width: 240px;
}

.col-import-bin label {
  margin-right: 4px;
}

.col-import-bin select {
  width: 64px;
}

/* file info */
.file-info-row {
  border-bottom: 1px dotted;
  flex-shrink: 0;
  padding-top: 12px;
  padding-bottom: 4px;
}

/* top settings panel */
.settings-panel-top {
  border-bottom: 1px dotted;
  flex-shrink: 0;
  max-width: 1000px;
}

.settings-panel-top>summary {
  cursor: pointer;
  font-weight: bold;
  padding-top: 8px;
  padding-bottom: 8px;
}

.settings-panel-top[open]>summary {
  padding-bottom: 0;
}

.settings-panel-top-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  padding-bottom: 4px;
  width: 100%;
}

.settings-panel-top-col {
  align-items: baseline;
  display: flex;
  flex-direction: column;
  width: 19%;
}

.settings-panel-top-row {
  display: flex;
  justify-content: space-between;
  padding-top: 4px;
  width: 100%;
}

.settings-panel-top-row label {
  flex-grow: 1;
}

.settings-panel-top-row .timezone {
  width: 60%;
}

.settings-panel-top-row .palette {
  width: 40%;
}

.settings-panel-top-row input[type="number"],
.settings-panel-top-row select {
  width: 64px;
}

/* toggle cps */
.toggle-cps-btn {
  display: none;
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  z-index: 2;
  background: #555;
  color: #CCC;
  border: 1px solid #888;
  padding: 8px 4px;
  cursor: pointer;
  font-size: 12px;
  writing-mode: vertical-lr;
}

/* spectrum, waterfall and cps view */
.preview-container {
  display: none;
  flex-shrink: 0;
  height: 125px;
  max-width: calc(100% - 320px);
  overflow-x: hidden;
  overflow-y: scroll;
  padding-left: 150px;
  scrollbar-color: #444 #444;
  width: fit-content;
}

.plot-container {
  flex: 1;
  min-height: 0;
  position: relative;
}

.plot-container .waterfall-container {
  display: inline-block;
  height: 100%;
  /* cpsPlotWidth in js + scroll */
  max-width: calc(100% - 320px);
  overflow-x: scroll;
  overflow-y: scroll;
}

.plot-container .cps-container {
  display: inline-block;
  height: 100%;
  position: absolute;
  overflow-y: scroll;
  overflow-x: scroll;
  padding-left: 1px;
  /* cpsPlotWidth in js + scroll */
  width: 320px;
}

.cps-container .cps-plot {
  position: absolute;
  transform: rotate(90deg);
  /* veeeeeery hacky, need to rewrite this */
  transform-origin: bottom left;
  /* cpsPlotWidth in js */
  top: -300px;
}

.horizontal-cursor,
.vertical-cursor {
  display: none;
  position: absolute;
  z-index: 1;
}

.horizontal-cursor {
  border-bottom: 1px dotted #777;
  height: 0;
}

.vertical-cursor {
  border-right: 1px dotted #777;
  width: 0;
}

/* bottom control panel */
.settings-panel-bottom {
  flex-shrink: 0;
  max-width: 1000px;
}

.settings-panel-bottom>summary {
  border-top: 1px dotted;
  cursor: pointer;
  font-weight: bold;
  padding-top: 8px;
  padding-bottom: 8px;
}

.settings-panel-bottom-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  padding-bottom: 4px;
  width: 100%;
}

.settings-panel-bottom-col {
  align-items: baseline;
  display: flex;
  flex-direction: column;
}

.settings-panel-bottom-col:nth-child(1) {
  width: 380px;
}

.settings-panel-bottom-col:nth-child(2) {
  width: 280px;
}

.settings-panel-bottom-col button {
  width: 140px;
}

.settings-panel-bottom-row {
  align-items: baseline;
  display: flex;
  padding-top: 4px;
  width: 100%;
}

.settings-panel-bottom-row-label {
  flex-grow: 1;
}

.settings-panel-bottom-row-range-group input[type="number"] {
  width: 70px;
}

.export-csv,
.export-bin-avg {
  margin-right: 8px;
}

/* misc */
.error {
  color: orangered;
}

.invisible {
  visibility: hidden;
}

@media (max-width: 1000px) {
  body {
    padding: 0 8px;
  }

  .status-text {
    left: 400px
  }

  .toggle-cps-btn {
    display: block;
  }

  .plot-container.cps-hidden .cps-container {
    display: none;
  }

  .plot-container.cps-hidden .waterfall-container {
    max-width: 100%;
  }

  .preview-container.cps-hidden {
    max-width: 100%;
  }

  .settings-panel-top-col {
    width: 30%;
  }

  .settings-panel-top-col:nth-child(4) {
    margin-left: 35%;
  }
}

@media (max-width: 700px) {
  body {
    padding: 0 4px;
  }

  .blocking-overlay {
    top: 62px;
  }

  .status-text {
    left: 250px
  }

  .col-import-bin {
    width: 100%;
    justify-content: space-between;
  }

  .settings-panel-top-row,
  .settings-panel-bottom-row {
    padding-top: 8px;
  }

  .settings-panel-top-col {
    width: 48%;
  }

  .settings-panel-top-col:nth-child(4) {
    margin-left: 0;
  }

  .settings-panel-top-col:nth-child(5) {
    margin-left: 52%;
  }

  .settings-panel-bottom-col:nth-child(1) {
    width: 100%;
  }

  .settings-panel-bottom-col:nth-child(2) {
    width: 100%;
  }

  .settings-panel-bottom-col button {
    width: 155px;
  }
}

@media (max-width: 450px) {
  body {
    padding: 0 2px;
  }

  .status-text {
    left: 150px
  }

  .settings-panel-top-row,
  .settings-panel-bottom-row {
    padding-top: 12px;
  }

  .settings-panel-top-col,
  .settings-panel-bottom-col {
    width: 100%;
  }

  .settings-panel-top-col:nth-child(5) {
    margin-left: 0;
  }
}

